# LatentMask

./: .gitignore  .gitmodules  01_research_design.md  02_experimental_tables.md  03_paper_en.md  04_paper_zh.md  05_real_experiment_replacement_checklist.md  FINAL_PROPOSAL.md  FINAL_PROPOSAL_zh.md  NOVELTY_CHECK_REPORT_v3.md  NOVELTY_CHECK_REPORT_v5.md  NOVELTY_CHECK_REPORT_v6.md  REVIEW_LATENTMASK_2026-04-24.md  setup.sh
latentmask/: EXPERIMENT_COMMANDS.md  __init__.py  pyproject.toml
latentmask/calibration/: channel_simulator.py  isotonic_fit.py
latentmask/configs/: ablations.yaml  base.yaml  dataset_100_readpe.yaml  dataset_102_cadpe.yaml
latentmask/data/: box_seg_dataset.py  datasets.py
latentmask/data/preprocessing/: convert_datasets.py
latentmask/losses/: bag_pu_loss.py  combined.py  pu_losses.py
latentmask/modules/: apn.py  propnet.py
latentmask/scripts/: 00_convert_datasets.sh  01_precompute_vesselness.sh  02_train_latentmask.sh  03_train_ablations.sh  04_eval_external.sh  05_compute_metrics.py  06_propensity_analysis.py  07_robustness_test.sh  08_significance_test.sh  convert_lits_to_nnunet.py  evaluate.py  generate_box_annotations.py  launch_training.py  run_calibration_cv.py  run_experiments.sh  run_experiments_v5.sh
latentmask/trainer/: __init__.py  ema.py  latentmask_trainer.py  nnunet_bridge.py
latentmask/utils/: cc_extraction.py  metrics.py  synthetic_missingness.py  vesselness.py
scripts/: README.md  a1_generate_box_annotations.sh  a2_run_all_calibrations.sh  c1_aggregate.py  run.py  runs.csv
tests/: test_no_leakage.py
(+25 files in other folders)
