[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "latentmask"
version = "0.1.0"
description = "LatentMask: Multi-Granularity Segmentation as Positive-Unlabeled Learning with Learned Propensity"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Anonymous"}]

dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "nibabel>=5.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "pydicom>=2.4",
    "pynrrd>=1.0",
    "scikit-image>=0.21",
    "nnunetv2>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["latentmask*"]

[tool.setuptools.package-data]
latentmask = ["configs/*.yaml"]
