[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "latentmask"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
    "scikit-learn",
    "nibabel",
    "SimpleITK",
]

[tool.setuptools.packages.find]
include = ["latentmask*"]
